@@ -33,4 +33,3 @@ rm -rf qm-@version@
 /usr/local/bin/qmtest
 /usr/local/bin/qmtrack
 /usr/local/share/doc/qm/*
-/usr/local/share/web/static/*
