@@ -1,0 +1,46 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+
+  File:   index.html
+  Author: Alex Samuel
+  Date:   2001-06-07
+
+  Contents:
+    QM Tools index page.
+
+  Copyright (C) 2001 CodeSourcery LLC.  This material may
+  be distributed only subject to the terms and conditions set forth in
+  the Software Carpentry Open Publication License, which is available at:
+
+    http://www.software-carpentry.com/openpub-license.html
+
+-->
+<html xhtmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <link rel="stylesheet" type="text/css" href="../../qm.css" />
+  <title>QM Tools Server</title>
+ </head>
+
+ <body>
+  <h3>QM Tools Server</h3>
+
+  <p>This is probably not the page you're looking for.</p>
+
+  <p>If you're looking for QMTrack, try <a href="/track/">this
+  link</a>.</p>
+
+  <p>If you're looking for QMTest, try <a href="/test/dir">this
+  link</a>.</p>
+ </body>
+</html>
+
+<!-- 
+  Local Variables:
+  mode: xml
+  indent-tabs-mode: nil
+  fill-column:72
+  End:
+-->
